# VLBI-cwl

./: .gitignore  .gitlab-ci.yml  DEVELOPER.md  README.md  facetselfcal_config.txt  pyproject.toml  target_selfcal_config.txt
Docker/: Dockerfile-vlbi
doc/: pipeline.yaml
rfistrategies/: lofar-default.lua  lofar-lba-wideband.lua
scripts/: Ateamclipper.py  PipelineStep_TargetListToMapfile.py  PipelineStep_makeLosotoParset.py  PipelineStep_makeTargetmap.py  PipelineStep_mapfilenamesFromMapfiles.py  TargetListToCoords.py  astrometry.py  check_Ateam_separation.py  convert_DIS2_to_h5parm.sh  direction_selection.py  estimate_facet_size.py  fix_symlinks_ddf.sh  flux_scaling.py  gather_dds3.sh  gather_model_images.sh  generate_input.sh  get_delay_dir.py  make_box.py  make_config_dical.py  make_config_int_with_resets.py  make_config_international.py  make_mslist_subtract.sh  make_postcal_parsets.py  make_summary.py  pre_flux_selection.py  run_selfcal.py  skynet.py  sort_times_into_freqGroups.py  source_finding.py
steps/: Ateamclipper.cwl  addCS.cwl  aoflagger.cwl  applycal.cwl  astrometry.cwl  average.cwl  average_intermediate_resolution.cwl  check_ateam_separation.cwl  check_station_mismatch.cwl  clipper.cwl  collect_linc_libraries.cwl  collectfiles.cwl  concatenate_files.cwl  copy_model_images.cwl  delay_cal_model.cwl  delay_solve.cwl  dp3_applycal.cwl  dp3_applycal_ddf.cwl  dp3_avg_remove_int_stations  dp3_concat.cwl  dp3_make_parset.cwl  dp3_parset.cwl  dp3_phaseup.cwl  dp3_prep_phasediff.cwl  dp3_prep_target.cwl  dp3_target_phaseup.cwl  dutch_avg.cwl  facet_selfcal.cwl  (+48 more)
(+36 files in other folders)
